fix(button): link style icon alignment fix #382

--- a/src/tedi/components/buttons/button-content/button-content.module.scss
+++ b/src/tedi/components/buttons/button-content/button-content.module.scss
@@ -514,7 +514,7 @@ $btn-width-large: 3.72rem;
   }
 
   .tedi-btn--link:not(.tedi-btn--is-loading) & {
-    display: inline;
+    display: inline-flex;
   }
 }
 
